# bioemu

./: .gitignore  .pre-commit-config.yaml  AZURE_AI_FOUNDRY.md  MANIFEST.in  MODEL_CARD.md  NOTICE.md  README.md  cgmanifest.json  environment.yml  pyproject.toml  setup.sh  setup_sidechain_relax.sh  tiny_sample.sh
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  publish.yml
checkpoints/2024-10-24-finetuned-amber-dg/: README.md  checkpoint.ckpt
checkpoints/bioemu-v1.0/: ema_checkpoint.ckpt
colabfold_setup/: README.md  batch.patch  setup.sh
configs/denoiser/: heun.yaml
dev/afdb_cluster_definitions/: README.md
notebooks/: ppft_example.ipynb  rollout.yaml
scripts/: sample_all.sh  sidechain_relax_all.sh  sidechain_relax_all_1e4.sh  sidechain_relax_all_1e6.sh
src/bioemu/: chemgraph.py  convert_chemgraph.py  denoiser.py  energy_minimization.py  get_embeds.py  md_utils.py  model_utils.py  models.py  pdb_utils.py  run_hpacker.py  sample.py  sde_lib.py  seq_io.py  shortcuts.py  sidechain_relax.py  so3_sde.py  structure_module.py  utils.py
src/bioemu/checkpoints/bioemu-v1.0/: README.md  checkpoint.ckpt  config.yaml
src/bioemu/colabfold_setup/: batch.patch  modules.patch  setup.sh  update.sh
src/bioemu/config/denoiser/: dpm.yaml
src/bioemu/hpacker_setup/: setup_hpacker.py  setup_sidechain_relax.sh
src/bioemu/openfold/np/: protein.py  residue_constants.py
src/bioemu/openfold/utils/: rigid_utils.py
src/bioemu/training/: foldedness.py  loss.py
tests/: conftest.py  expected.npz  state_dict.ptkeep  test_convert_chemgraph.py  test_denoiser.py  test_embeds.py  test_mdrelax.py  test_models.py  test_sample.py  test_sde_lib.py  test_seq_io.py  test_so3_diffusion.py  test_so3_utils.py  test_utils.py  tiny_config.yaml
tests/training/: conftest.py  test_foldedness.py  test_loss.py
